--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -450,7 +450,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \noindent
 
 \years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France.\\ 
-\years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK.\\ 
+\years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK. \href{https://youtu.be/8ootXx1csJQ}{[video]}\\ 
 \years{2021h} \textsc{Keynote Speaker (online)} (July 5, 2021). \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
 \years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K.  (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
 \years{2021f} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
@@ -658,7 +658,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2022}Goudarzi, V., \textbf{Xambó, A.} (Forthcoming). ``Ear to Waipapa Taumata Rau'' (online performance). \emph{New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
+\years{2022}Goudarzi, V., \textbf{Xambó, A.} (May 19, 2022). ``Ear to Waipapa Taumata Rau'' (online performance). \emph{New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
 \years{2021b}\textbf{Xambó, A.}, Goudarzi, V. (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2021a}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
@@ -978,15 +978,15 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Organisation Founder / Chair}
 \noindent
 
-\years{2018-2019}\textsc{Co-Founder \& Chair}. \emph{Women Nordic Music Technology}, NTNU/UiO. Trondheim, Norway.\\
-\years{2016--2017}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech}, GTCMT, Georgia Tech. Atlanta, GA, USA.
+\years{08/2018-12/2019}\textsc{Co-Founder \& Chair}. \emph{Women Nordic Music Technology}, NTNU/UiO. Trondheim, Norway.\\
+\years{05/2016--09/2017}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
 
 \subsection*{Fellow}
 \noindent
 
 \years{2019--present}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
-\years{2018--2019}\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of EECS, QMUL.
+\years{08/2018--01/2019}\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of EECS, QMUL.
 
 
 \subsection*{Officer / Consultant}
