--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -496,6 +496,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Own Institution}
 \noindent
 
+\years{2022} \textsc{Oral Presenter}. (June 8, 2022). “Future Research Leaders 2022 Showcase". DMU, Leicester, UK.\\
 \years{2021} \textsc{Oral Presenter}. (November 10, 2021). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
 \years{2020} \textsc{Oral Presenter}. (November 25, 2020). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
 \years{2019c} \textsc{Oral Presenter} together with Jensenius, A., Jawad, K. and Aandahl, E. (May 23, 2019). “International joint Master's programme in Music, Communication \& Technology". \emph{Instituttseminar for sosiologi og statsvitenskap}. NTNU Department of Sociology and Political Science, Rockheim, Trondheim, Norway.\\
@@ -658,7 +659,9 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2022}Goudarzi, V., \textbf{Xambó, A.} (May 19, 2022). ``Ear to Waipapa Taumata Rau'' (online performance). \emph{New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
+\years{2022c}Roma, G., \textbf{Xambó, A.} (July TBC, 2022). ``shreds''. \emph{Web Audio Conference (WAC '22)}. Université C\^{o}te d'Azur, Cannes, France\\
+\years{2022b}Roma, G., \textbf{Xambó, A.} (June 21, 2022). ``shreds'' (online performance). \emph{International Conference on Live Interfaces (ICLI '22)}. Lisboa, Portugal.\\
+\years{2022a}Goudarzi, V., \textbf{Xambó, A.} (May 19, 2022). ``Ear to Waipapa Taumata Rau'' (online performance). \emph{New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
 \years{2021b}\textbf{Xambó, A.}, Goudarzi, V. (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2021a}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
@@ -707,6 +710,8 @@ Collaborator: Gerard Roma.
 \noindent
 
 %\years{2022--present}personic.\\
+%Role: Concept and implementation.\\
+%\years{2022--present}personic: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
 %Role: Concept and implementation.\\
 \years{2020--present}MIRLCa: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
 Role: Concept and implementation.\\
@@ -905,7 +910,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
 \subsection*{Undergraduate Students}
-\years{09/2021--06/2022}Ongoing supervision of two L6 undergraduate students in music technology for their MATT3000 Research Project: Abbey Young working on ``A Practice-based Analysis of Practical Workshops to Improve Gender Equality in Music Technology Education in the UK'' and Tolu Ikuyinminu working on ``Investigating the Positive and Negative Impacts of the `UK Drill' Genre on Generation Z''. 
+\years{09/2021--06/2022}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Abbey Young's  ``A Practice-based Analysis of Practical Workshops to Improve Gender Equality in Music Technology Education in the UK'' and Tolu Ikuyinminu's ``Investigating the Positive and Negative Impacts of the `UK Drill' Genre on Generation Z''. 
 
 \section*{Mentoring}
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
@@ -914,6 +919,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
+\years{06/2022}External Master’s thesis examiner for Stephen Gardener, Master thesis title: \emph{"The Algorithmic Composition Explorer"}. Master's programme: Music, Communication and Technology. Department of Musicology, University of Oslo, Norway.\\
 \years{05/2022}External PhD examiner for Alejandro Iván Paz Ortiz. PhD thesis title: \emph{"On-the-fly Synthesizer Programming with Rule Learning"}. PhD degree in Computing, Universitat Politècnica de Catalunya - BarcelonaTech. Barcelona, Spain.\\
 \years{02/2022}PhD review for Robin Foster, PhD programme: DMU. Leicester, UK.\\
 \years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"} (\emph{Cyborg interface: Interactive device to reflect on the relationship between art, technology and the body in performance}). PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
@@ -1030,7 +1036,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2019a--2021}\emph{Audio Mostly} (2019, 2021).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018--2020}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2021).\\
+\years{2018--2022}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2022).\\
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
