--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -357,9 +357,9 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Journal Articles}
 \noindent
-{\years{2021b}\textbf{Xambó, A.} (Forthcoming) ``Virtual Agents in Live Coding: A Short Review''. \emph{e-Contact!}, (online journal).\\
-{\years{2021a}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
-{\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
+{\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, (online journal).\\
+{\years{2021}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
+{\years{2020}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
@@ -372,7 +372,7 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-{\years{2022}\textbf{Xambó, A.}, Goudarzi, V. (Forthcoming) ``The Mobile Audience as a Digital Musical Persona in Telematic Performance''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
+{\years{2022}\textbf{Xambó, A.}, Goudarzi, V. (2022) ``The Mobile Audience as a Digital Musical Persona in Telematic Performance''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
 {\years{2021}\textbf{Xambó, A.}, Roma, G., Roig, S., Solaz, E. (2021) ``Live Coding with the Cloud and a Virtual Agent''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 {\years{2020b}\textbf{Xambó, A.}, Roma, G. (2020) ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '20)}. Birmingham, UK. pp. 55--60.}\\
 \years{2020a}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway. pp. 41--47.\\
@@ -626,12 +626,13 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2010b}peterMann's “init 10--12". (December 18, 2010). Onda Sonora.\\
 \years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.%\\[2cm]%hack
 
-\section*{Selected Performances}
+\section*{Performances}
 %\noindent
 
 \subsection*{Solo Performances}
 \noindent
 
+\years{2022d}\textbf{Xambó, A.} (September 16, 2022). ``When virtual meets reality''. \emph{British Science Festival}, LCB Depot, Leicester, UK.\\
 \years{2022c}\textbf{Xambó, A.} (March 19, 2022). ``Make Noise Not War (live coding session)''. \emph{Algorave 10th Birthday Party}. Online event. Streaming from Sheffield, UK.\\
 \years{2022b}\textbf{Xambó, A.} (March 11, 2022). ``detuning a tuning (live coding piece)''. \emph{BEAST @ Centrala: Anna Xambó Sedó, Milad K. Mardakheh}. Centrala, Birmingham, UK.\\
 \years{2022a}\textbf{Xambó, A.} (March 8, 2022). ``Algonoise feat. Olympe de Gauges (live coding session)''. \emph{LIVECODERA a global live coding community gathering on International Women’s Day}. Online event. Streaming from Sheffield, UK.\\
@@ -659,9 +660,10 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2022c}Roma, G., \textbf{Xambó, A.} (July TBC, 2022). ``shreds''. \emph{Web Audio Conference (WAC '22)}. Université C\^{o}te d'Azur, Cannes, France\\
-\years{2022b}Roma, G., \textbf{Xambó, A.} (June 21, 2022). ``shreds'' (online performance). \emph{International Conference on Live Interfaces (ICLI '22)}. Lisboa, Portugal.\\
-\years{2022a}Goudarzi, V., \textbf{Xambó, A.} (May 19, 2022). ``Ear to Waipapa Taumata Rau'' (online performance). \emph{New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
+\years{2022d}Roma, G., \textbf{Xambó, A.} (July 6, 2022). ``shreds''. \emph{Web Audio Conference (WAC '22)}. Université C\^{o}te d'Azur, Cannes, France\\
+\years{2022c}Roma, G., \textbf{Xambó, A.} (June 21, 2022). ``shreds'' (online performance). \emph{International Conference on Live Interfaces (ICLI '22)}. Lisboa, Portugal.\\
+\years{2022b}Goudarzi, V., \textbf{Xambó, A.} (June 11, 2022). ``immerse in the lake 2.0'' (hybrid performance). \emph{Symphony Center}. Chicago, USA.\\
+\years{2022a}Goudarzi, V., \textbf{Xambó, A.} (May 19, 2022). ``Ear to Waipapa Taumata Rau'' (online performance). \emph{New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.\\
 \years{2021b}\textbf{Xambó, A.}, Goudarzi, V. (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2021a}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
@@ -684,7 +686,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \section*{Mastering (other's work)}
 \noindent
 
-\years{Forthcoming}\emph{Ana y las Romanoides (o de las telepatías transaurales)} [FLAC/MP3 files] by Ana María Romano G. Barcelona/Sheffield: Carpal Tunnel.\\
+\years{2022}\emph{Ana y las Romanoides (o de las telepatías transaurales)} [FLAC/MP3 files] by Ana María Romano G. Barcelona/Sheffield: Carpal Tunnel.\\
 \years{2018}\emph{Noiselets} [FLAC/MP3 files] by Various Artists (scmute, peterMann, Martin Hug, Faraldo, 0001, Miquel Parera, Urge to Kill). Barcelona: Carpal Tunnel.
 
 \section*{Other Creative Products}
@@ -709,10 +711,8 @@ Collaborator: Gerard Roma.
 \subsection*{Code}
 \noindent
 
-%\years{2022--present}personic.\\
-%Role: Concept and implementation.\\
-%\years{2022--present}personic: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
-%Role: Concept and implementation.\\
+\years{2022--present}personic: \href{https://github.com/axambo/personic}{github.com/axambo/personic}.\\
+Role: Concept and implementation.\\
 \years{2020--present}MIRLCa: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
 Role: Concept and implementation.\\
 \years{2019--present}MIRLC 2.0.\\
