--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -113,8 +113,7 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 ---\emph{Senior Lecturer in Music and Audio Technology}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{BSc Digital Music Technology Programme Leader}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
----\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
----\emph{Women in NIME (WiNIME) Officer}, International Conference of New Interfaces for Musical Expression.
+---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom
 %%\hrule
 \section*{Areas of Interest}
 %Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
@@ -403,7 +402,8 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
-\years{2022}Goudarzi, V., \textbf{Xambó, A.} (Forthcoming). ``Ear to Waipapa Taumata Rau''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
+\years{2022b}Roma, G., \textbf{Xambó, A.} (2022). ``shreds''. In \emph{Proceedings of the Web Audio Conference 2022 (WAC '22)}. Cannes, France.\\
+\years{2022a}Goudarzi, V., \textbf{Xambó, A.} (2022). ``Ear to Waipapa Taumata Rau''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.\\
 \years{2021b}\textbf{Xambó, A.} (2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. In \emph{Proceedings of the Web Audio Conference 2021 (WAC '21)}. Barcelona, Spain.\\
 \years{2021a}\textbf{Xambó, A.} (2021). ``A Live Coding Session With the Cloud and a Virtual Agent''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 \years{2019b}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
@@ -449,10 +449,11 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2022c} \textsc{Oral Presenter (online)} together with Goudarzi, V. (June 30, 2022). “The Mobile Audience as a Digital Musical Persona in Telematic Performance". \emph{NIME '22}. \emph{Waipapa Taumata Rau, Aotearoa / The University of Auckland}, New Zealand. \href{https://youtu.be/xu5ySfbqYs8}{[video]}\\
 \years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France.\\ 
 \years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK. \href{https://youtu.be/8ootXx1csJQ}{[video]}\\ 
 \years{2021h} \textsc{Keynote Speaker (online)} (July 5, 2021). \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
-\years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K.  (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
+\years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K. (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
 \years{2021f} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
 \emph{NYU Shanghai}, Shanghai, China. \href{https://youtu.be/F4UoH1hRMoU}{[video]}\\
 \years{2021e} \textsc{Oral Presenter (online)} (May 21, 2021). “Audience engagement in musical performances through on-site and online networks". \emph{Computer Networks meet Music Instruments}. COSY Colloquium, Faculty of Computer Science, University of Vienna. Vienna, Austria.\\ 
@@ -664,8 +665,9 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2022c}Roma, G., \textbf{Xambó, A.} (June 21, 2022). ``shreds'' (online performance). \emph{International Conference on Live Interfaces (ICLI '22)}. Lisboa, Portugal.\\
 \years{2022b}Goudarzi, V., \textbf{Xambó, A.} (June 11, 2022). ``immerse in the lake 2.0'' (hybrid performance). \emph{Symphony Center}. Chicago, USA.\\
 \years{2022a}Goudarzi, V., \textbf{Xambó, A.} (May 19, 2022). ``Ear to Waipapa Taumata Rau'' (online performance). \emph{New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.\\
-\years{2021b}\textbf{Xambó, A.}, Goudarzi, V. (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
-\years{2021a}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
+\years{2021c}\textbf{Xambó, A.}, Goudarzi, V. (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
+\years{2021b}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
+\years{2021a}Dirty Electronics Ensemble, Jon.Ogara, and \textbf{Xambó, A.} (May 17, 2021). "Dirty Dialogues". PACE, De Montfort University, Leicester, UK.\\
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
 \years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{WAC 2019}. Rockheim, Trondheim, Norway.\\
 \years{2018e}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
@@ -919,15 +921,15 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
-\years{06/2022}External Master’s thesis examiner for Stephen Gardener, Master thesis title: \emph{"The Algorithmic Composition Explorer"}. Master's programme: Music, Communication and Technology. Department of Musicology, University of Oslo, Norway.\\
-\years{05/2022}External PhD examiner for Alejandro Iván Paz Ortiz. PhD thesis title: \emph{"On-the-fly Synthesizer Programming with Rule Learning"}. PhD degree in Computing, Universitat Politècnica de Catalunya - BarcelonaTech. Barcelona, Spain.\\
-\years{02/2022}PhD review for Robin Foster, PhD programme: DMU. Leicester, UK.\\
-\years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"} (\emph{Cyborg interface: Interactive device to reflect on the relationship between art, technology and the body in performance}). PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
-\years{09/2021}External PhD examiner for Jack Armitage. PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK. PhD thesis title: \emph{"Subtlety and Detail in Digital Musical Instrument Design"}.\\
-\years{02/2021}PhD review (midway assessment) for Sam Topley, PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
+\years{06/2022}External Master’s thesis examiner for Stephen Gardener (June 24, 2022), Master thesis title: \emph{"The Algorithmic Composition Explorer"}. Master's programme: Music, Communication and Technology. Department of Musicology, University of Oslo, Norway.\\
+\years{05/2022}External PhD examiner for Alejandro Iván Paz Ortiz (May 3, 2022). PhD thesis title: \emph{"On-the-fly Synthesizer Programming with Rule Learning"}. PhD degree in Computing, Universitat Politècnica de Catalunya - BarcelonaTech. Barcelona, Spain.\\
+\years{02/2022}PhD review for Robin Foster (February 24, 2022), PhD programme: DMU. Leicester, UK.\\
+\years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán (October 27, 2021). PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"} (\emph{Cyborg interface: Interactive device to reflect on the relationship between art, technology and the body in performance}). PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
+\years{09/2021}External PhD examiner for Jack Armitage (September 14, 2021). PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK. PhD thesis title: \emph{"Subtlety and Detail in Digital Musical Instrument Design"}.\\
+\years{02/2021}PhD review (midway assessment) for Sam Topley (February 24, 2021), PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
 \years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
-\years{08/2019}External MSc examiner for Torgrim Rudland Næss, Master thesis title: \emph{"A Physical Intelligent Instrument Using Recurrent Neural Networks"}. Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
-\years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, PhD thesis title: \emph{"Condis–conducting Digital System Extended Role Of The Conductor in Mixed Music Performance"}. Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway. 
+\years{08/2019}External MSc examiner for Torgrim Rudland Næss (August 29, 2019), Master thesis title: \emph{"A Physical Intelligent Instrument Using Recurrent Neural Networks"}. Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
+\years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson (June 28, 2019), PhD thesis title: \emph{"Condis–conducting Digital System Extended Role Of The Conductor in Mixed Music Performance"}. Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway. 
 
 \section*{Additional Experience}
 %\noindent
@@ -999,7 +1001,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \noindent
 
 \years{2020}\textsc{Diversity consultant}. \emph{2nd Conference on AI Music Creativity (MuMe + CSMC)}. Graz, Austria.\\
-\years{2019--present}\textsc{WiNIME Officer}. \emph{International Conference of New Interfaces for Musical Expression}.
+\years{2019--2022}\textsc{Women in NIME (WiNIME) Officer}. \emph{International Conference of New Interfaces for Musical Expression}.
 
 
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
@@ -1043,7 +1045,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
 \years{2016, 2020}\emph{International Conference on Live Interfaces (ICLC)} (2016, 2020).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016--2020}\emph{Web Audio Conference (WAC)} (2016--2022).\\
+\years{2016--2022}\emph{Web Audio Conference (WAC)} (2016--2022).\\
 \years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction (CHI)} (2015--2021).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
@@ -1081,7 +1083,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Hackathon Coach}
 \noindent
 
-\years{2022}(January 29-30, 2022) On-the-Fly Live Coding Hacklab. ZKM, Karlsruhe, Germany.\\
+\years{2022}(January 29-30, 2022) On-the-Fly Live Coding Hacklab. European Union's "Creative Europe" program. Mentor of live coding and machine learning. ZKM, Karlsruhe, Germany.\\
 \years{2018}(July 4, 2018) Wallifornia MusicTech Hackathon. Liège, Belgium.
 
 \subsection*{Jury Member}
