updated contact email

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -1000,6 +1000,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Officer / Consultant}
 \noindent
 
+\years{2022}\textsc{Diversity consultant}. \emph{Web Audio Conference 2022}. Cannes, France.\\
 \years{2020}\textsc{Diversity consultant}. \emph{2nd Conference on AI Music Creativity (MuMe + CSMC)}. Graz, Austria.\\
 \years{2019--2022}\textsc{Women in NIME (WiNIME) Officer}. \emph{International Conference of New Interfaces for Musical Expression}.
 
