--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -112,8 +112,7 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 \section*{Current Academic Roles}
 ---\emph{Senior Lecturer in Music and Audio Technology}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
----\emph{BSc Digital Music Technology Programme Leader}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
----\emph{ Associate Fellow}, Higher Education Academy, United Kingdom
+---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.
 %%\hrule
 \section*{Areas of Interest}
 %Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
@@ -158,7 +157,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
-\years{2020}\textsc{Research Supervision} (with certificate). Instructors: Sally Ruane (module 1), Deborah Cartmell (module 2), Meera Warrier (module 3). DMU. Leicester, UK.\\
+\years{2020}\textsc{Research Supervision}. Instructors: Sally Ruane (module 1), Deborah Cartmell (module 2), Meera Warrier (module 3). DMU. Leicester, UK.\\
 \years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars} (with certificate). Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
@@ -191,6 +190,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\noindent
 
 \subsection*{Academic Grants, Honors, Awards \& Accolades}
+\years{10/2022--11/2022} \textsc{Research sabbatical}. DMU, Leicester, UK.\\
 \years{10/2021--06/2022} \textsc{Future Research Leaders (FRL) 8 Programme} accolade. DMU, Leicester, UK.\\
 \years{2019c} \textsc{Web Audio Conference 2019 Best Paper Award} to Anna Xambó, Robin Støckert, Alexander Refsum Jensenius and Sigurd Saue. NTNU, Trondheim, Norway.\\
 \years{2019b} \textsc{The EUNIS DØRUP E-Learning Award} to Robin Støckert, Alexander Refsum Jensenius, Anna Xambó and Øyvind Brandtsegg. NTNU, Trondheim, Norway.\\
@@ -332,10 +332,12 @@ Total Euro Amount: \euro3,000
 \section*{Publications}
 %\noindent
 
-\subsection*{Books / Edited Books}
+\subsection*{Peer-Reviewed Books / Edited Books, Journal Special Issues, and Proceedings}
 \noindent
 
-\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2019). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
+\years{2023}\textbf{Xambó, A.}, Roma, G., Magnusson, T. (eds.) (Forthcoming). Live Coding Sonic Creativities. \emph{Organised Sound}, 28(2).\\
+\years{2020b}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). JAES Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).\\
+\years{2020a}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2019). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
 \years{2019}Queiroz, M. \textbf{Xambó, A.} (eds.) (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
 \years{2004}\textbf{Xambó, A.} (2004). \emph{Herramientas De Diseño Digital / Digital Design Tools}. Madrid: Anaya-Multimedia. Editor: Eugenio Tuya Feijoo. ISBN 8441516979.
 
@@ -347,16 +349,9 @@ Total Euro Amount: \euro3,000
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
 
-
-\subsection*{Peer-Reviewed Journal Special Issues}
-\noindent
-\years{2023}\textbf{Xambó, A.}, Roma, G., Magnusson, T. (eds.) (Forthcoming). Live Coding Sonic Creativities. \emph{Organised Sound}, 28(2).\\
-\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). JAES Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).
-
-
 \subsection*{Journal Articles}
 \noindent
-{\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, (online journal).\\
+{\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
 {\years{2021}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
 {\years{2020}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
@@ -437,10 +432,11 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2008}\textbf{Xambó, A.} (2008). ``Interfaces for Sketching Musical Compositions''. Master thesis. Unpublished. UPF. Barcelona, Spain\\ 
 \years{2004}\textbf{Xambó, A.}, Martos, E. (2004). ``Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària'' (Report of New Technologies and Audiovisual Communication in the Primary Education). Report. Unpublished. Supported by Fundació Caixa de Sabadell. In collaboration with UB. Barcelona, Spain.
 
-\subsection*{Book Reviews}
+\subsection*{Book Reviews \& Endorsements}
 \noindent
 
-\years{2021}\textbf{Xambó, A.} (2021). ``Book Review: \emph{Thor Magnusson, Sonic Writing: Technologies of Material, Symbolic, and Signal Inscriptions. New York: Bloomsbury Academic, 2019. ISBN: 9781501313851. DOI: https://doi.org/10.5040/9781501313899}''. \emph{Organised Sound}, 26:3, pp. 430–433.
+\years{2022}(July 20, 2022). Book Endorsement of \emph{``The Body in Sound, Music and Performance Studies in Audio and Sonic Arts.'' Edited By Linda O Keeffe, Isabel Nogueira. Focal Press / Routledge.}''\\
+\years{2021}(December 22, 2021). ``Book Review: \emph{Thor Magnusson, Sonic Writing: Technologies of Material, Symbolic, and Signal Inscriptions. New York: Bloomsbury Academic, 2019. ISBN: 9781501313851. DOI: https://doi.org/10.5040/9781501313899}''. \emph{Organised Sound}, 26:3, pp. 430–433.
 
 
 \section*{Talks, Panels \& Oral Presentations}
@@ -449,6 +445,9 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2022e} \textsc{Invited Talk} (November 11, 2022). "HCI meets AI in Live Coding: A Practitioner's Perspective". \emph{Symposium Technoscientific
+Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, Finland.\\ 
+\years{2022d} \textsc{Invited Talk (online)} (October 26, 2022). "Designing networked algorithmic music performances - Creative coding as practice-led research". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Computational Music for All, GTCMT, Georgia Tech, Atlanta, GA, USA.\\ 
 \years{2022c} \textsc{Oral Presenter (online)} together with Goudarzi, V. (June 30, 2022). “The Mobile Audience as a Digital Musical Persona in Telematic Performance". \emph{NIME '22}. \emph{Waipapa Taumata Rau, Aotearoa / The University of Auckland}, New Zealand. \href{https://youtu.be/xu5ySfbqYs8}{[video]}\\
 \years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France.\\ 
 \years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK. \href{https://youtu.be/8ootXx1csJQ}{[video]}\\ 
@@ -497,7 +496,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Own Institution}
 \noindent
 
-\years{2022} \textsc{Oral Presenter}. (June 8, 2022). “Future Research Leaders 2022 Showcase". DMU, Leicester, UK.\\
+\years{2022b} \textsc{Oral Presenter}. (December 7, 2022). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
+\years{2022a} \textsc{Oral Presenter}. (June 8, 2022). “Future Research Leaders 2022 Showcase". DMU, Leicester, UK.\\
 \years{2021} \textsc{Oral Presenter}. (November 10, 2021). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
 \years{2020} \textsc{Oral Presenter}. (November 25, 2020). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
 \years{2019c} \textsc{Oral Presenter} together with Jensenius, A., Jawad, K. and Aandahl, E. (May 23, 2019). “International joint Master's programme in Music, Communication \& Technology". \emph{Instituttseminar for sosiologi og statsvitenskap}. NTNU Department of Sociology and Political Science, Rockheim, Trondheim, Norway.\\
@@ -633,6 +633,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
+\years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Peforming Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
 \years{2022d}\textbf{Xambó, A.} (September 16, 2022). ``When virtual meets reality''. \emph{British Science Festival}, LCB Depot, Leicester, UK.\\
 \years{2022c}\textbf{Xambó, A.} (March 19, 2022). ``Make Noise Not War (live coding session)''. \emph{Algorave 10th Birthday Party}. Online event. Streaming from Sheffield, UK.\\
 \years{2022b}\textbf{Xambó, A.} (March 11, 2022). ``detuning a tuning (live coding piece)''. \emph{BEAST @ Centrala: Anna Xambó Sedó, Milad K. Mardakheh}. Centrala, Birmingham, UK.\\
@@ -800,12 +801,27 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
-\years{01/2022--04/2022}Course: \emph{MATD3039 Advanced Musical Electronics} (30 h). \# Students: $\sim$4. \\
+\years{05/2023--06/2023}Course: \emph{MTEC1005\_2223\_604 Industry Practice} (42 h). \# Students: $\sim$15-20. \\
 De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures, instruction and assessment.\\
+\years{02/2023--03/2023}Course: \emph{MTEC1003\_2223\_603 Sound Analysis \& Synthesis} (14 h). \# Students: $\sim$35-40. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures, instruction and assessment.\\
+\years{01/2023--04/2023}Course: \emph{MATD2029 Digital Audio Electronics: Sensors \& Interfaces} (30 h). \# Students: $\sim$10. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures and labs, instruction and assessment.\\
+\years{12/2022--05/2023}Course: \emph{MATT3002 Community Arts} (44 h). \# Students: $\sim$10. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures and labs, instruction and assessment.\\
+\years{01/2022--04/2022}Course: \emph{MATD3039 Advanced Musical Electronics} (36 h). \# Students: $\sim$4. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures and labs, instruction and assessment.\\
 \years{10/2021--12/2021}Course: \emph{MATD3009 Advanced Digital Signal Processing Music} (30 h). \# Students: $\sim$4. \\
 De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures and labs, instruction and assessment.\\
 \years{10/2021--12/2021}Course: \emph{MATD2004 Further Digital Signal Processing} (30 h). \# Students: $\sim$13. \\
 De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures and labs, instruction and assessment.\\
 \years{01/2020--04/2021}Course: \emph{MATD1019 Audio Electronics Fundamentals} (12 h). \# Students: $\sim$10. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
@@ -902,6 +918,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 %\noindent
 
 \subsection*{PhD Students}
+\years{08/2022--present}2nd supervisor of Sam Topley. DMU.\\
 \years{04/2022--present}2nd supervisor of Eva Kára. DMU.
 
 \subsection*{Master Students}
@@ -921,12 +938,13 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
+%\years{Forthcoming}External PhD examiner for António Ramires (February X, 2023). PhD degree in XX, Universitat Pompeu Fabra. Barcelona, Spain.\\
 \years{06/2022}External Master’s thesis examiner for Stephen Gardener (June 24, 2022), Master thesis title: \emph{"The Algorithmic Composition Explorer"}. Master's programme: Music, Communication and Technology. Department of Musicology, University of Oslo, Norway.\\
 \years{05/2022}External PhD examiner for Alejandro Iván Paz Ortiz (May 3, 2022). PhD thesis title: \emph{"On-the-fly Synthesizer Programming with Rule Learning"}. PhD degree in Computing, Universitat Politècnica de Catalunya - BarcelonaTech. Barcelona, Spain.\\
 \years{02/2022}PhD review for Robin Foster (February 24, 2022), PhD programme: DMU. Leicester, UK.\\
 \years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán (October 27, 2021). PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"} (\emph{Cyborg interface: Interactive device to reflect on the relationship between art, technology and the body in performance}). PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
 \years{09/2021}External PhD examiner for Jack Armitage (September 14, 2021). PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK. PhD thesis title: \emph{"Subtlety and Detail in Digital Musical Instrument Design"}.\\
-\years{02/2021}PhD review (midway assessment) for Sam Topley (February 24, 2021), PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
+\years{02/2021}PhD review (midway assessment) for Sam Topley (February 24, 2021), PhD programme: DMU / Midlands4Cities. Leicester, UK.\\
 \years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
 \years{08/2019}External MSc examiner for Torgrim Rudland Næss (August 29, 2019), Master thesis title: \emph{"A Physical Intelligent Instrument Using Recurrent Neural Networks"}. Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
 \years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson (June 28, 2019), PhD thesis title: \emph{"Condis–conducting Digital System Extended Role Of The Conductor in Mixed Music Performance"}. Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway. 
@@ -979,7 +997,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Academic Programme Leader}
 \noindent
 
-\years{09/2020--present}\textsc{BSc Digital Music Technology Programme Leader}, Leicester Media School, DMU.\\
+\years{09/2020--09/2022}\textsc{BSc Digital Music Technology Programme Leader}, Leicester Media School, DMU.\\
 \years{01/2019--12/2019}\textsc{MCT Programme Study Leader}, Department of Music, NTNU.\\
 \years{01/2019--12/2019}\textsc{MCT Programme Council Leader}, Department of Music, NTNU/UiO.
 
@@ -1071,7 +1089,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Book Reviewer}
 \noindent
 
-\years{2020--2021}\emph{Routledge}.
+\years{2020--2022}\emph{Routledge}.
 
 %\subsection*{Panelist}
 %\noindent
