--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -231,7 +231,7 @@ Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Co
 Role: PI. \\
 Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; l’ull cec. \\
 Collaborators: TOPLAP Barcelona, FluCoMa, Freesound.\\
-Total Pound Amount: \pounds10,000 \\
+Total Pound Amount: \pounds10,000 \\[.2cm]
 
 \years{08/2018-12/2019}\textsc{Start-up Package (Startpakke)} \\
 Funding body: NTNU. \\
